--- a/css/small.css
+++ b/css/small.css
@@ -27,6 +27,12 @@ a{
 	margin-top: -15px;
 }
 /* events适配 */
+#events-content i{
+	font-size: 20px;
+}
+#events-content{
+  height: 40px !important;
+}
 #qrcode{
 	width: 100%;
 }
@@ -81,10 +87,18 @@ a{
 #events-content{
 	margin-top:-15px ;
 }
+#target-content i{
+	font-size: 20px;
+}
 #target-content{
 	margin-top: -15px;
+	height: 40px !important;
 }
 /* footer适配*/
+#footer-content i{
+	font-size: 20px;
+}
 #footer-content{
 	margin-top: -15px;
+	height: 40px;
 }
